Log file hash when importing polling stations
