# backend/openapi.json
@@ -6814,6 +6814,7 @@
         "required": [
           "import_election_id",
           "import_file_name",
+          "import_file_hash",
           "import_number_of_polling_stations"
         ],
         "properties": {
@@ -6821,6 +6822,9 @@
             "type": "integer",
             "format": "int32",
             "minimum": 0
+          },
+          "import_file_hash": {
+            "type": "string"
           },
           "import_file_name": {
             "type": "string"
@@ -7037,17 +7041,14 @@
         "type": "object",
         "required": [
           "file_name",
-          "polling_stations"
+          "data"
         ],
         "properties": {
-          "file_name": {
+          "data": {
             "type": "string"
           },
-          "polling_stations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/PollingStationRequest"
-            }
+          "file_name": {
+            "type": "string"
           }
         }
       },
