# backend/src/election/api.rs
@@ -373,15 +373,13 @@ pub async fn election_import(
     let mut new_election = EML110::from_str(&edu.election_data)?.as_abacus_election()?;
     new_election = EML230::from_str(&edu.candidate_data)?.add_candidate_lists(new_election)?;
 
-    // Process polling stations
-    let mut polling_places = None;
-    if let Some(polling_station_data) = edu.polling_station_data {
+    // Validate polling stations
+    if let Some(polling_station_data) = edu.polling_station_data.as_ref() {
         // If polling stations are submitted, file name must be also
         if edu.polling_station_file_name.is_none() {
             return Err(APIError::EmlImportError(EMLImportError::MissingFileName));
         }
-
-        polling_places = Some(EML110::from_str(&polling_station_data)?.get_polling_stations()?);
+        EML110::from_str(polling_station_data)?.get_polling_stations()?;
     }
 
     // Set counting method
@@ -425,12 +423,12 @@ pub async fn election_import(
         .await?;
 
     // Create polling stations
-    if let Some(places) = polling_places {
+    if let Some(polling_station_data) = edu.polling_station_data {
         let polling_stations_request = PollingStationsRequest {
             file_name: edu
                 .polling_station_file_name
                 .ok_or(EMLImportError::MissingFileName)?,
-            polling_stations: places,
+            data: polling_station_data,
         };
         create_imported_polling_stations(
             &mut tx,
